# parsuricata

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_parsuricata.py  version.sh
.github/workflows/: ci.yml
parsuricata/: __init__.py  _parser.py  rules.py  transformer.py
