[tool.poetry]
name = 'parsuricata'
version = "0.2.4"
description = 'Parse Suricata rules'
authors = ['Zach "theY4Kman" Kanzler <they4kman@gmail.com>']
license = 'MIT'

readme = 'README.md'
keywords = ['suricata', 'security']

[tool.poetry.dependencies]
python = '^3.5'
lark-parser = '^0.7.1'

[tool.poetry.dev-dependencies]
pytest = '^4.5'

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
