[tool.poetry]
name = 'parsuricata'
version = "0.3.0"
description = 'Parse Suricata rules'
authors = ['Zach "theY4Kman" Kanzler <they4kman@gmail.com>']
license = 'MIT'

readme = 'README.md'
keywords = ['suricata', 'security']

[tool.poetry.dependencies]
python = '^3.6'
lark-parser = '^0.12.0'

[tool.poetry.dev-dependencies]
pytest = '^6.2'

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
