[tool.poetry]
name = 'parsuricata'
version = "0.3.1"
description = 'Parse Suricata rules'
authors = ['Zach "theY4Kman" Kanzler <they4kman@gmail.com>']
license = 'MIT'
packages = [
  { include = "parsuricata" },
  { include = "test_parsuricata.py", format = "sdist" },
  { include = "LICENSE", format = "sdist" },
  { include = "CHANGELOG.md", format = "sdist" },
]

readme = 'README.md'
homepage = 'https://github.com/theY4Kman/parsuricata'
repository = 'https://github.com/theY4Kman/parsuricata'
keywords = ['suricata', 'security']

[tool.poetry.urls]
Issues = 'https://github.com/theY4Kman/parsuricata/issues'

[tool.poetry.dependencies]
python = '^3.6'
lark-parser = '^0.12.0'

[tool.poetry.dev-dependencies]
pytest = '^6.2'

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
